@@ -1,0 +1,8 @@
+[Desktop Entry]
+Icon=gnect-icon.png
+_Name=Gnect
+_Comment=A four in a row game for GNOME
+Exec=gnect
+Terminal=0
+Type=Application
+Categories=Application;Game;
