@@ -21,6 +21,7 @@ gataxx/gataxx.soundlist.in
 gataxx/properties.c
 glines/glines.c
 glines/glines.desktop.in
+gnect/data/gnect.desktop.in
 gnect/src/dialog.c
 gnect/src/gnect.c
 gnect/src/gui.c
