@@ -1,3 +1,8 @@
+2002-04-16  Bastien Nocera  <hadess@hadess.net>
+
+	* POTFILES.in: added gnect/data/gnect.desktop.in to the translatable
+	files
+
 2002-04-12  Abel Cheung  <maddog@linux.org.hk>
 
 	* .cvsignore: Added some file(s).
